third_party/move/tools/move-asm/tests/assembler/undef_label.exp
processed 1 task

task 0 'publish'. lines 1-6:
Error: error: unbound branch label `l3`
  ┌─ test:4:5
  │
4 │     br_false l3
  │     ^^^^^^^^^^^


