third_party/move/tools/move-asm/tests/assembler/undef_label.masm
//# publish --print-bytecode
module 0x66::test

fun f(x: u64)
    br_false l3
l2: ret
